--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     #loading{position: fixed;left: 0;top:0;width: 100%;height: 100%;z-index:9999999;background: transparent!important;}
     #loading img{width: 20%; position: absolute;display: block;left:50%;top:50%;-webkit-transform: translate(-50%,-50%);-moz-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);-o-transform: translate(-50%,-50%);transform: translate(-50%,-50%);  }
   </style>
-<link href="./static/css/mainpage.21485d0b18cb91b0fa29f87125215ab4.css?77c065b5444d2b39d3e0" rel="stylesheet"></head>
+<link href="./static/css/index.21485d0b18cb91b0fa29f87125215ab4.css?76324736529714000c03" rel="stylesheet"></head>
 <body>
 <div id="loading">
   <img src="./static/load.gif" alt="低调看直播_世界杯直播_世界杯小组赛_世界杯淘汰赛_jrs直播_直播体育_西甲直播_NBA直播吧_英超直播_高清免费_007看球_足球直播_NBA直播_英超直播_007kq_007直播" />
 </div>
 <div id="app"></div>
 <!-- built files will be auto injected -->
-<script type="text/javascript" src="./static/js/manifest.673fff95f866cb4e66f1.js?77c065b5444d2b39d3e0"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?77c065b5444d2b39d3e0"></script><script type="text/javascript" src="./static/js/mainpage.5b94deba86c1a66e3231.js?77c065b5444d2b39d3e0"></script></body>
+<script type="text/javascript" src="./static/js/manifest.7cfbe2511c77356777f7.js?76324736529714000c03"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?76324736529714000c03"></script><script type="text/javascript" src="./static/js/index.b30e2bce367808e8026d.js?76324736529714000c03"></script></body>
 </html>
