--- a/player.html
+++ b/player.html
@@ -20,12 +20,13 @@
   <title>低调看体育直播_世界杯直播免费看</title>
 
   <script type="text/javascript" src="./static/js/common.js"></script>
-  <script type="text/javascript" src="//cdn2.fungotv.com/a8_lottery/ckplayer/ckplayer/ckplayer.js"></script>
+  <!--<script type="text/javascript" src="//cdn2.fungotv.com/a8_lottery/ckplayer/ckplayer/ckplayer.js"></script>-->
+  <script type="text/javascript" src="./static/ckplayer/ckplayer/ckplayer.js"></script>
   <style type="text/css">
     #loading{position: fixed;left: 0;top:0;width: 100%;height: 100%;z-index:9999999;}
     #loading img{width: 20%; position: absolute;display: block;left:50%;top:50%;-webkit-transform: translate(-50%,-50%);-moz-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);-o-transform: translate(-50%,-50%);transform: translate(-50%,-50%);  }
   </style>
-<link href="./static/css/player.efa017546f437d4a5ee8c83ec93fcd66.css?36a6bda5f65110f27ffa" rel="stylesheet"></head>
+<link href="./static/css/player.efa017546f437d4a5ee8c83ec93fcd66.css?a30962c9c133744123d8" rel="stylesheet"></head>
 <body>
 <div id="loading">
   <img src="./static/load.gif" alt="低调看直播_世界杯直播_世界杯小组赛_世界杯淘汰赛_jrs直播_直播体育_西甲直播_NBA直播吧_英超直播_高清免费_007看球_足球直播_NBA直播_英超直播_007kq_007直播" />
@@ -33,5 +34,5 @@
 <div id="app"></div>
 <!-- built files will be auto injected -->
 
-<script type="text/javascript" src="./static/js/manifest.7cfbe2511c77356777f7.js?36a6bda5f65110f27ffa"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?36a6bda5f65110f27ffa"></script><script type="text/javascript" src="./static/js/player.4557adc5a60db5509467.js?36a6bda5f65110f27ffa"></script></body>
+<script type="text/javascript" src="./static/js/manifest.7cfbe2511c77356777f7.js?a30962c9c133744123d8"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?a30962c9c133744123d8"></script><script type="text/javascript" src="./static/js/player.4557adc5a60db5509467.js?a30962c9c133744123d8"></script></body>
 </html>
