--- a/download.html
+++ b/download.html
@@ -47,7 +47,7 @@
   var _mtac = {};
   (function() {
     var mta = document.createElement("script");
-    mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.4";
+    mta.src = "https://pingjs.qq.com/h5/stats.js?v2.0.4";
     mta.setAttribute("name", "MTAH5");
     mta.setAttribute("sid", "500593083");
     mta.setAttribute("cid", "500593091");
