--- a/download.html
+++ b/download.html
@@ -18,42 +18,18 @@
   <meta name="baidu_ssp_verify" content="9ea5bd3e5102a3ada14c7eec10a8c802">
   <link rel="icon" type="image/x-icon" href="./static/logo.png" />
   <title>低调看体育直播_世界杯直播免费看</title>
-  <script type="text/javascript">
-    (function (doc, win) {
-      var docEl = doc.documentElement,
-        resizeEvt = 'orientationchange' in win ? 'orientationchange' : 'resize',
-        recalc = function () {
-          var clientWidth = docEl.clientWidth;
-          if (!clientWidth) return;
-          docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
-        };
-      if (!doc.addEventListener) return;
-      win.addEventListener(resizeEvt, recalc, false);
-      doc.addEventListener('DOMContentLoaded', recalc, false);
-    })(document, window);
-  </script>
+  <script type="text/javascript" src="./static/js/common.js"></script>
   <style type="text/css">
-    #loading{position: fixed;left: 0;top:0;width: 100%;height: 100%;z-index:9999999;}
+    #loading{position: fixed;left: 0;top:0;width: 100%;height: 100%;z-index:9999999;background: transparent!important;}
     #loading img{width: 20%; position: absolute;display: block;left:50%;top:50%;-webkit-transform: translate(-50%,-50%);-moz-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);-o-transform: translate(-50%,-50%);transform: translate(-50%,-50%);  }
   </style>
-<link href="./static/css/download.1036d37400feba8375bfb62adfd72bb9.css?a30962c9c133744123d8" rel="stylesheet"></head>
+<link href="./static/css/download.1036d37400feba8375bfb62adfd72bb9.css?692a4f32219a8c357e60" rel="stylesheet"></head>
 <body>
+
 <div id="loading">
   <img src="./static/load.gif" alt="低调看直播_世界杯直播_世界杯小组赛_世界杯淘汰赛_jrs直播_直播体育_西甲直播_NBA直播吧_英超直播_高清免费_007看球_足球直播_NBA直播_英超直播_007kq_007直播" />
 </div>
 <div id="app"></div>
-<!-- built files will be auto injected -->
-<script>
-  var _mtac = {};
-  (function() {
-    var mta = document.createElement("script");
-    mta.src = "https://pingjs.qq.com/h5/stats.js?v2.0.4";
-    mta.setAttribute("name", "MTAH5");
-    mta.setAttribute("sid", "500593083");
-    mta.setAttribute("cid", "500593091");
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(mta, s);
-  })();
-</script>
-<script type="text/javascript" src="./static/js/manifest.7cfbe2511c77356777f7.js?a30962c9c133744123d8"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?a30962c9c133744123d8"></script><script type="text/javascript" src="./static/js/download.aeb06f781d0042f42014.js?a30962c9c133744123d8"></script></body>
+
+<script type="text/javascript" src="./static/js/manifest.1442044d67caca41ce47.js?692a4f32219a8c357e60"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?692a4f32219a8c357e60"></script><script type="text/javascript" src="./static/js/download.f76a9c3f1447a324ccb0.js?692a4f32219a8c357e60"></script></body>
 </html>
