--- a/order.html
+++ b/order.html
@@ -24,13 +24,46 @@
     #loading{position: fixed;left: 0;top:0;width: 100%;height: 100%;z-index:9999999;}
     #loading img{width: 20%; position: absolute;display: block;left:50%;top:50%;-webkit-transform: translate(-50%,-50%);-moz-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);-o-transform: translate(-50%,-50%);transform: translate(-50%,-50%);  }
   </style>
-<link href="./static/css/order.b3154794397650aa0247ec4eb0573095.css?a30962c9c133744123d8" rel="stylesheet"></head>
+<link href="./static/css/order.b3154794397650aa0247ec4eb0573095.css?692a4f32219a8c357e60" rel="stylesheet"></head>
 <body onselectstart="return false;">
 <div id="loading">
   <img src="./static/load.gif" alt="低调看直播_世界杯直播_世界杯小组赛_世界杯淘汰赛_jrs直播_直播体育_西甲直播_NBA直播吧_英超直播_高清免费_007看球_足球直播_NBA直播_英超直播_007kq_007直播" />
 </div>
 <div id="app"></div>
 <!-- built files will be auto injected -->
+<!--接入的广告-->
+<script type="text/html" id="ad_placeholder_61316">
+  <a
+    style="width: 100%;position: fixed;bottom: 0;left:0;z-index: 9999;"
+    id="specialBan">
+    <video style="width: 100%;height: 2rem;object-fit:fill;" src="<%=data.video_url%>" x5-playsinline="true" playsinline="true" webkit-playsinline="true" poster="<%=data.image_url%>"></video>
+  </a>
+</script>
+<script type="text/javascript" src="//vijs.rayjump.com/bin/vijs.js" onload="Vijs.init(this);" sign="5d998f30a3aa6cb54dfb017972ead9d0" appid="107396"></script>
+<script type="text/javascript">
+if (window.browser.versions.ios || window.browser.versions.iPad) {
 
-<script type="text/javascript" src="./static/js/manifest.7cfbe2511c77356777f7.js?a30962c9c133744123d8"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?a30962c9c133744123d8"></script><script type="text/javascript" src="./static/js/order.9e19cfa1b314ebf9ba38.js?a30962c9c133744123d8"></script></body>
+} else {
+  window.onload = function () {
+    document.getElementById('specialBan').style.display = 'none'
+  }
+}
+if (window.Vijs) {
+  var myAd61316 = Vijs.setAD({
+    unitid: 61316,
+    view: 285,
+    placeholderid: 'ad_placeholder_61316',
+    autoplay: true,
+    loadedCallback: function() {
+      console.log('success');
+    },
+    customOpen: function () {
+      if (window.MtaH5) {
+        MtaH5.clickStat("videobanner")
+      }
+    }
+  });
+}
+</script>
+<script type="text/javascript" src="./static/js/manifest.1442044d67caca41ce47.js?692a4f32219a8c357e60"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?692a4f32219a8c357e60"></script><script type="text/javascript" src="./static/js/order.9e19cfa1b314ebf9ba38.js?692a4f32219a8c357e60"></script></body>
 </html>
