007移动端改版发布

--- a/player.html
+++ b/player.html
@@ -17,52 +17,23 @@
   <meta name="referrer" content="no-referrer">
   <meta name="baidu_ssp_verify" content="9ea5bd3e5102a3ada14c7eec10a8c802">
   <link rel="icon" type="image/x-icon" href="./static/logo.png" />
+
   <title>低调看体育直播_世界杯直播免费看</title>
 
   <script type="text/javascript" src="./static/js/common.js"></script>
-  <!--<script type="text/javascript" src="//cdn2.fungotv.com/a8_lottery/ckplayer/ckplayer/ckplayer.js"></script>-->
-  <script type="text/javascript" src="./static/ckplayer/ckplayer/ckplayer.js"></script>
-  <style type="text/css">
-    #loading{position: fixed;left: 0;top:0;width: 100%;height: 100%;z-index:9999999;}
-    #loading img{width: 20%; position: absolute;display: block;left:50%;top:50%;-webkit-transform: translate(-50%,-50%);-moz-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%);-o-transform: translate(-50%,-50%);transform: translate(-50%,-50%);  }
-  </style>
-<link href="./static/css/player.efa017546f437d4a5ee8c83ec93fcd66.css?da1cd9c0d0953301116e" rel="stylesheet"></head>
+  <link rel="stylesheet" type="text/css" href="./static/videojs/videojs.css">
+  <script src="./static/videojs/video.min.js"></script>
+  <script src="./static/videojs/videojs-contrib-hls.js"></script>
+  <script src="./static/videojs/videojs-flash.js"></script>
+
+  <!--<script src="https://unpkg.com/video.js/dist/video.min.js"></script>-->
+  <!--<script src="https://unpkg.com/videojs-flash/dist/videojs-flash.js"></script>-->
+  <!--<script src="https://unpkg.com/videojs-contrib-hls/dist/videojs-contrib-hls.js"></script>-->
+<link href="./static/css/player.b335f014ef9e66232045ff750758533b.css?c7fb4705eb0901f2df7c" rel="stylesheet"></head>
 <body>
-<div id="loading">
-  <img src="./static/load.gif" alt="低调看直播_世界杯直播_世界杯小组赛_世界杯淘汰赛_jrs直播_直播体育_西甲直播_NBA直播吧_英超直播_高清免费_007看球_足球直播_NBA直播_英超直播_007kq_007直播" />
-</div>
+
 <div id="app"></div>
 <!-- built files will be auto injected -->
-<!--接入的广告-->
-<div style="width: 100%;position: fixed;bottom: 0;left:0;z-index: 9999;">
-  <script type="text/html" id="ad_placeholder_61316">
-    <a
-      style="width: 100%;position: fixed;bottom: 0;left:0;z-index: 9999;"
-      id="specialBan">
-      <video muted autoplay="autoplay" style="width: 100%;height: 2rem;object-fit:fill;" src="<%=data.video_url%>" x5-playsinline="true" playsinline="true" webkit-playsinline="true" poster="<%=data.image_url%>"></video>
-    </a>
-  </script>
-</div>
-<script type="text/javascript" src="//vijs.rayjump.com/bin/vijs.js" onload="Vijs.init(this);" sign="5d998f30a3aa6cb54dfb017972ead9d0" appid="107396"></script>
-<script type="text/javascript">
-if (window.browser.versions.ios || window.browser.versions.iPad) {
-  if (window.Vijs) {
-    var myAd61316 = Vijs.setAD({
-      unitid: 61316,
-      view: 285,
-      placeholderid: 'ad_placeholder_61316',
-      autoplay: true,
-      loadedCallback: function() {
-        console.log('success');
-      },
-      customOpen: function () {
-        if (window.MtaH5) {
-          MtaH5.clickStat("videobanner")
-        }
-      }
-    });
-  }
-}
-</script>
-<script type="text/javascript" src="./static/js/manifest.1442044d67caca41ce47.js?da1cd9c0d0953301116e"></script><script type="text/javascript" src="./static/js/vendor.c5ab38cec811af48e1de.js?da1cd9c0d0953301116e"></script><script type="text/javascript" src="./static/js/player.4557adc5a60db5509467.js?da1cd9c0d0953301116e"></script></body>
+
+<script type="text/javascript" src="./static/js/manifest.85f1520f9276ca46f0de.js?c7fb4705eb0901f2df7c"></script><script type="text/javascript" src="./static/js/vendor.aa4813e6a4003697a8aa.js?c7fb4705eb0901f2df7c"></script><script type="text/javascript" src="./static/js/player.c77e33ea50b71513b2df.js?c7fb4705eb0901f2df7c"></script></body>
 </html>
